Incorrect Rendering of Dashed Underline in WebKit https://bugs.webkit.org/show_bug.cgi?id=268448

Reviewed by Alan Baradlay.

This commit updates the rendering logic for dashed lines. Previously, dashes intersecting with the specified boundaries were completely omitted. Now, the rendering process trims these dashes at the intersection points instead of entirely removing them. This enhancement ensures a more accurate and visually consistent representation of dashed lines, especially in scenarios where partial dashes are expected to be visible at the edges.

* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawLinesForText):

Canonical link: https://commits.webkit.org/276585@main